<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Attendance</string>
    <string name="digital_id_setup">Digital ID Setup</string>
    <string name="enter_register_no">Enter Register No.</string>
    <string name="eg_reg" tools:ignore="Typos">eg. 21MIS1XXX</string>
    <string name="enter_name">Enter Name</string>
    <string name="eg_name">eg. Srinivasan J P</string>
    <string name="setup_note">NOTE: This is one time set up, you can\'t change the your digital ID on your own.</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="register_no_placeholder">Register no</string>
    <string name="name_placeholder">Name</string>
    <string name="user_image_description">user image</string>
    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="getting_device_finger_print">Getting Device Finger Print</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="marked_as_present">Marked as Present</string>
    <string name="doneSymbol">doneSymbol</string>
    <string name="vit_logo">Vit logo</string>
    <string name="getting_location_info">Getting Location info</string>
    <string name="no_network">no network</string>
    <string name="password">password</string>
    <string name="create_pin">Create PIN</string>
    <string name="enter_id_pin">Enter ID PIN</string>
    <string name="enter">Enter</string>
    <string name="permission_instruction">All the permission is required to mark you present</string>
    <string name="step1">Step 1: Click the below button to open settings or open manually</string>
    <string name="step_2">Step 2: Click the Camera permission</string>
    <string name="step_3">Step 3: Check the Allow button</string>
    <string name="step_4">Step 4: Then come back and click the Location permission</string>
    <string name="step_5">Step 5: Check the Location permission</string>
    <string name="step_6_">Step 6: Turn on \'Use precise location\'</string>
    <string name="open_settings">Open Settings</string>
    <string name="face_align">Align your face to the center of the camera to detect your face</string>
    <string name="progress_text">Your face not Matches our record</string>
</resources>