<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Activities.Setup"
    android:paddingVertical="50dp"
    android:paddingHorizontal="20dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digital_id_setup"
        android:id="@+id/setupText"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:fontFamily="@font/neb"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingVertical="30dp"
        android:layout_below="@+id/setupText"
        android:orientation="vertical"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="30dp"
        android:background="@drawable/setup_card">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/nm"
            android:text="@string/enter_register_no"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="#00000000"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/reg_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eg_reg"
                android:textColor="@color/black"
                android:autofillHints="username"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:fontFamily="@font/nm"
            android:text="@string/enter_name"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/namelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="filled"
            app:boxStrokeColor="#00000000"
            app:hintTextColor="@color/black">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/eg_name"
                android:textColor="@color/black"
                android:autofillHints="username"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_note"
            android:textColor="@color/paleBlack"
            android:layout_marginVertical="30dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/round_corner"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish_setup"
                android:textSize="18sp"
                android:id="@+id/finishSetupText"
                android:layout_marginVertical="10dp"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:fontFamily="@font/nb"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                android:id="@+id/progressBar"/>
        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>