<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.IDPage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="50dp"
            android:background="@drawable/id_background"
            android:elevation="20dp"
            android:paddingHorizontal="20dp">


            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/vit_logo"
                android:src="@drawable/vit_logo" />

            <LinearLayout
                android:id="@+id/idCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="10dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/profileImage"
                        android:layout_width="220dp"
                        android:scaleType="centerCrop"
                        android:layout_height="300dp"
                        android:contentDescription="@string/user_image_description"
                        android:src="@drawable/baseline_person_24" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/idName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/neb"
                        android:text="@string/name_placeholder"
                        android:textColor="@color/black"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/idRegNo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nb"
                        android:text="@string/register_no_placeholder"
                        android:textColor="@color/black"
                        android:textSize="28sp" />

                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/markAttendanceBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/idCard"
                android:layout_marginBottom="20dp"
                android:background="@drawable/mark_attendance">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/neb"
                    android:padding="20dp"
                    android:text="@string/mark_attendance"
                    android:textColor="@color/white"
                    android:textSize="28sp" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


</RelativeLayout>