<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp"
    app:cardBackgroundColor="@color/white"
    android:elevation="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="20dp"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:fontFamily="@font/nb"
                android:layout_height="wrap_content"
                android:text="@string/enter_id_pin"
                android:layout_margin="20dp"
                />
            <com.chaos.view.PinView
                android:id="@+id/pinInput"
                style="@style/PinWidget.PinView"
                android:layout_width="wrap_content"
                android:imeOptions="actionDone"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:hint="@string/password"
                android:inputType="numberDecimal"
                android:itemBackground="@drawable/id_background"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textStyle="bold"
                app:cursorColor="@color/gradientGreenEnd"
                app:cursorWidth="2dp"
                app:hideLineWhenFilled="true"
                app:itemCount="4"
                app:itemHeight="48dp"
                app:itemRadius="4dp"
                app:itemSpacing="15dp"
                app:itemWidth="48dp"
                app:lineColor="@drawable/pin_selector"
                app:lineWidth="2dp"
                app:viewType="rectangle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter"
                android:id="@+id/enter"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:backgroundTint="#00BCD4"
                android:layout_gravity="center"
                />
        </LinearLayout>


</androidx.cardview.widget.CardView>